// Copyright 2025 Adobe. All rights reserved.
// This file is licensed to you under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License. You may obtain a copy
// of the License at http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under
// the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
// OF ANY KIND, either express or implied. See the License for the specific language
// governing permissions and limitations under the License.

syntax = "proto3";

package aquarium.v2;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/adobe/aquarium-fish/lib/rpc/gen/proto/aquarium/v2;aquariumv2";

// RoleService handles role management operations
service RoleService {
  // Get list of roles
  rpc List(RoleServiceListRequest) returns (RoleServiceListResponse) {}
  
  // Get role by name
  rpc Get(RoleServiceGetRequest) returns (RoleServiceGetResponse) {}
  
  // Create new role
  rpc Create(RoleServiceCreateRequest) returns (RoleServiceCreateResponse) {}
  
  // Update existing role
  rpc Update(RoleServiceUpdateRequest) returns (RoleServiceUpdateResponse) {}
  
  // Delete role
  rpc Delete(RoleServiceDeleteRequest) returns (RoleServiceDeleteResponse) {}
}

// Role represents a role in the RBAC system
message Role {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  repeated Permission permissions = 4;
}

// Permission represents a permission that can be granted to roles
message Permission {
  string resource = 1;
  string action = 2;
}

message RoleServiceListRequest {}

message RoleServiceListResponse {
  bool status = 1;
  string message = 2;
  repeated Role data = 3;
}

message RoleServiceGetRequest {
  string name = 1;
}

message RoleServiceGetResponse {
  bool status = 1;
  string message = 2;
  Role data = 3;
}

message RoleServiceCreateRequest {
  string name = 1;
  repeated Permission permissions = 2;
}

message RoleServiceCreateResponse {
  bool status = 1;
  string message = 2;
  Role data = 3;
}

message RoleServiceUpdateRequest {
  string name = 1;
  repeated Permission permissions = 2;
}

message RoleServiceUpdateResponse {
  bool status = 1;
  string message = 2;
  Role data = 3;
}

message RoleServiceDeleteRequest {
  string name = 1;
}

message RoleServiceDeleteResponse {
  bool status = 1;
  string message = 2;
} 

